# security-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_keychain_password.rs  01_smoke.rs  02_identity_pkcs12.rs  03_certificate_inspect.rs  04_policy_properties.rs  05_trust_evaluate.rs  06_authorization_external_form.rs  07_code_signing_info.rs  08_random_bytes.rs  09_transform_base64.rs  10_secure_transport_context.rs  11_cms_cert_bag.rs  12_key_derivation_pbkdf2.rs  13_key_agreement_shared_secret.rs  14_key_import_sign_verify.rs  15_key_encrypt_export.rs  16_async_trust.rs
examples/support/: mod.rs
src/: authorization.rs  bridge.rs  cms.rs  code.rs  error.rs  identity.rs  key.rs  key_agreement.rs  key_derivation.rs  lib.rs  policy.rs  private.rs  random_bytes.rs  secure_transport.rs  transform.rs
src/async_api/: mod.rs
src/certificate/: mod.rs
src/code_signing/: mod.rs
src/ffi/: access_control.rs  item.rs  key.rs  mod.rs  policy.rs
src/keychain/: mod.rs
src/random/: mod.rs
src/trust/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/SecurityBridge/: Authorization.swift  CMS.swift  Certificate.swift  Code.swift  Core.swift  Identity.swift  Key.swift  KeyAgreement.swift  KeyDerivation.swift  Keychain.swift  Policy.swift  RandomBytes.swift  SecureTransport.swift  Transform.swift  Trust.swift
tests/: audit_symbols_tests.rs  authorization_tests.rs  certificate_tests.rs  cms_tests.rs  code_tests.rs  common.rs  identity_tests.rs  key_agreement_tests.rs  key_derivation_tests.rs  key_tests.rs  keychain_tests.rs  policy_tests.rs  random_bytes_tests.rs  raw_ffi_tests.rs  secure_transport_tests.rs  transform_tests.rs  trust_tests.rs
tests/fixtures/: test-cert.der  test-cert.pem  test-identity.p12  test-key-rsa.pkcs1.der  test-key.pem
