[package]
name = "security-rs"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/security-rs"
repository = "https://github.com/doom-fish/security-rs"
description = "Safe Rust bindings for Apple's Security framework — keychain, identity, certificates, trust, authorization, CMS, SecureTransport, and cryptographic primitives on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["security", "keychain", "certificates", "macos", "apple"]
categories = ["api-bindings", "os::macos-apis", "cryptography"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "COVERAGE.md",
    "LICENSE-*",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "security"
crate-type = ["lib"]

[features]
default = []
async = ["dep:doom-fish-utils"]
raw-ffi = []

[dependencies]
apple-cf = { version = ">=0.9, <0.10" }
base64 = "0.22"
bitflags = "2.6"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.3, <0.4", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "16_async_trust"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
